Changelog
=========

1.1 (unreleased)
----------------

- Nothing changed yet.


1.0 (2012-07-04)
----------------

- Remove spaces between "user - " and the username. make the CSV & PDF nice


1.0a4 (2012-06-15)
------------------

- Remove spaces in the template so PDF and CSV export looks nice


1.0a3 (2012-05-15)
------------------

- Add upgrade step.
- Install collective.js.datatables as a dependency

1.0a2 (2012-05-15)
------------------

- Add import step to reindex hasLocalRoles index
- Fix permission of the @@localrolesdatatables_catalog_view to cmf.ManagePortal
- Add type column to the datatable

1.0a1 (2012-05-11)
------------------

- Initial release