@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="portal_css">
+
+ <stylesheet id="++resource++jquery.datatables/extras/TableTools/media/css/TableTools.css"/>
+
+</object>
