@@ -12,6 +12,7 @@ class TestCatalogLocalRolesView(base.IntegrationTestCase):
         from collective.localrolesdatatables import localroles_view
         self.view = localroles_view.CatalogLocalRolesView(self.folder,
                                                       self.layer['request'])
+        self.view.update()
         #TODO: add localroles and add tests
 
     def test_roles(self):
