@@ -3,12 +3,12 @@
     i18n_domain="collective.localrolesdatatables">
 
     <upgradeStep
-        source="1000"
-        destination="1001"
+        source="*"
+        destination="1002"
         title="Upgrade"
         description=""
         profile="collective.localrolesdatatables:default"
-        handler=".v1x.upgrade_1000_to_1001"
+        handler=".upgrades.common"
         />
 
 </configure>
